 * Do not go to disk for reading hints file sizes (CASSANDRA-19477)
 * Fix system_views.settings to handle array types (CASSANDRA-19475)
 * Memoize Cassandra verion and add a backoff interval for failed schema pulls (CASSANDRA-18902)
 * Fix StackOverflowError on ALTER after many previous schema changes (CASSANDRA-19166)
Merged from 4.0:
 * Change logging to TRACE when failing to get peer certificate (CASSANDRA-19508)
 * Push LocalSessions info logs to debug (CASSANDRA-18335)
 * Filter remote DC replicas out when constructing the initial replica plan for the local read repair (CASSANDRA-19120)
 * Remove redundant code in StorageProxy#sendToHintedReplicas (CASSANDRA-19412)
 * Remove bashisms for mx4j tool in cassandra-env.sh (CASSANDRA-19416)
 * Add new concurrent_merkle_tree_requests config property to prevent OOM during multi-range and/or multi-table repairs (CASSANDRA-19336)
 * Skip version check if an endpoint is dead state in Gossiper#upgradeFromVersionSupplier (CASSANDRA-19187)
 * Fix Gossiper::hasMajorVersion3Nodes to return false during minor upgrade (CASSANDRA-18999)
 * Revert unnecessary read lock acquisition when reading ring version in TokenMetadata introduced in CASSANDRA-16286 (CASSANDRA-19107)
Merged from 3.11:
 * Move ClientWarn.State#warnings to a thread-safe list (CASSANDRA-19427)
Merged from 3.0:
 * Fix SCM URL link (CASSANDRA-19422)
 * Backport CASSANDRA-16418 to 3.x (CASSANDRA-18824)


5.0-beta1
 * Fix SAI intersection queries (CASSANDRA-19011)
 * Clone EndpointState before sending GossipShutdown message (CASSANDRA-19115)
 * SAI indexes are marked queryable during truncation (CASSANDRA-19032)
 * Enable Direct-IO feature for CommitLog files using Java native API's. (CASSANDRA-18464)
 * SAI fixes for composite partitions, and static and non-static rows intersections (CASSANDRA-19034)
 * Improve SAI IndexContext handling of indexed and non-indexed columns in queries (CASSANDRA-18166)